# struct_auto_from

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: test.yml
src/: lib.rs
tests/: test_auto_from.rs
