[package]
name = "auto_from"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.28"
syn = { version = "2.0.22", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

[dev-dependencies]
fake = { version = "2.6.1", features = ["derive"] }
rand = "0.8.5"
rstest = "0.17.0"
