[package]
name = "auto_from"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Simple Rust library for auto generating conversion methods"
homepage = "https://github.com/mateuszgrzyb/auto_from"
repository = "https://github.com/mateuszgrzyb/auto_from"
readme = "README.md"
keywords = ["macros", "from", "into"]
categories = ["development-tools::procedural-macro-helpers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.28"
syn = { version = "2.0.22", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

[dev-dependencies]
fake = { version = "2.6.1", features = ["derive"] }
rand = "0.8.5"
rstest = "0.17.0"
